--- a/src/css/MangaContent.css
+++ b/src/css/MangaContent.css
@@ -10,10 +10,32 @@
     margin-bottom: 20px;
   }
   
-  .manga-detail p {
+  .description-container {
+    margin-bottom: 20px;
+  }
+  
+  .description-toggle {
+    background-color: #2a0a5e;
+    color: #ffffff;
+    border: 2px solid #ffffff; /* Uniform border all around */
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 16px;
+    
+  }
+  
+  .description-toggle:hover {
+    background-color: #3a1b6e;
+    
+  }
+  
+  .manga-description {
     color: #cccccc;
     line-height: 1.6;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    padding: 10px;
+    border-radius: 5px;
   }
   
   .chapter-pages {
