changed manga loading message

--- a/src/css/MangaContent.css
+++ b/src/css/MangaContent.css
@@ -105,7 +105,6 @@
   left: 0;
   right: 0;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   background-color: rgba(0, 0, 0, 0.8);
@@ -116,12 +115,11 @@
 .page-navigation button {
   background-color: #2a0a5e;
   color: white;
-  border: 2px solid #ffffff;
+  border: 2px solid #ffffff; 
   padding: 5px 10px;
-  margin: 5px;
+  margin: 0 10px;
   cursor: pointer;
   border-radius: 10px;
-  flex: 0 1 auto;
 }
 
 .page-navigation button:disabled {
@@ -133,81 +131,33 @@
 
 .page-navigation span {
   color: white;
-  margin: 5px;
-  flex: 0 1 auto;
+  margin: 0 10px;
 }
 
 .page-navigation input[type="range"] {
-  width: 100%;
-  max-width: 200px;
-  margin: 5px;
-  flex: 1 1 100%;
+  -webkit-appearance: none;
+  width: 200px;
+  height: 2px;
+  background: white;
+  outline: none;
+  margin: 0 10px;
 }
 
-.page-navigation .page-input-form {
-  display: flex;
-  align-items: center;
-  margin: 5px;
-  flex: 0 1 auto;
-}
 
-.page-navigation .page-input {
-  width: 60px;
-  padding: 5px;
-  border: 1px solid white;
-  background-color: rgba(255, 255, 255, 0.1);
-  color: white;
-  border-radius: 5px 0 0 5px;
-}
-
-.page-navigation .go-button {
-  padding: 5px 10px;
-  background-color: #2a0a5e;
-  color: white;
-  border: 1px solid white;
-  border-left: none;
+.page-navigation input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 12px;
+  height: 12px;
+  background: white;
   cursor: pointer;
-  border-radius: 0 5px 5px 0;
+  border-radius: 50%;
 }
 
-.page-navigation .go-button:hover {
-  background-color: #3a1b6e;
-}
-
-@media (max-width: 600px) {
-  .page-navigation {
-    padding: 5px;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-
-  .page-navigation button {
-    padding: 3px 6px;
-    font-size: 0.8em;
-    margin: 2px;
-  }
-
-  .page-navigation span {
-    font-size: 0.8em;
-    margin: 2px;
-  }
-
-  .page-navigation input[type="range"] {
-    display: none;
-  }
-
-  .page-navigation .page-input-form {
-    margin: 2px;
-  }
-
-  .page-navigation .page-input {
-    width: 40px;
-    padding: 3px;
-    font-size: 0.8em;
-  }
-
-  .page-navigation .go-button {
-    padding: 3px 6px;
-    font-size: 0.8em;
-  }
+.page-navigation input[type="range"]::-moz-range-thumb {
+  width: 12px;
+  height: 12px;
+  background: white;
+  cursor: pointer;
+  border-radius: 50%;
 }
