only 1 background for all routes rn + changed header color

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -37,7 +37,7 @@
     flex-direction: column;
     align-items: flex-start;
     padding: 16px;
-    background-color: #1a0940; /* Adjust this color if needed */
+    background-color: #091840; /* Adjust this color if needed */
 }
 
 .home-header .search-box {
