--- a/src/css/MangaContent.css
+++ b/src/css/MangaContent.css
@@ -8,6 +8,8 @@
   .manga-detail h1, .manga-detail h2 {
     color: #ffffff;
     margin-bottom: 20px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
   }
   
   .description-container {
