--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   min-height: 100vh;
-  background-image: url('../images/pathh.jpg');
+  background-image: url('../images/about.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
