--- a/src/css/MangaContent.css
+++ b/src/css/MangaContent.css
@@ -38,6 +38,7 @@
     margin-top: 10px;
     padding: 10px;
     border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .chapter-pages {
@@ -112,6 +113,7 @@
   background-color: rgba(0, 0, 0, 0.8);
   padding: 10px;
   z-index: 1000;
+
 }
 
 .page-navigation button {
@@ -122,6 +124,8 @@
   margin: 0 10px;
   cursor: pointer;
   border-radius: 10px;
+  font-family: Arial, Helvetica, sans-serif
+
 }
 
 .page-navigation button:disabled {
@@ -129,6 +133,8 @@
   color: #0a2d5e;
   border: 2px solid #0a2d5e;
   cursor: not-allowed;
+  font-family: Arial, Helvetica, sans-serif
+
 }
 
 .page-navigation span {
