--- a/src/css/home.css
+++ b/src/css/home.css
@@ -31,11 +31,9 @@
   flex-direction: column;
 }
 
-.manga-card-container {
-  width: 100%; /* Ensure the container takes full width */
-}
-
-.manga-card img {
-  width: 100%; /* Ensure the image takes full width of the card */
-  height: auto; /* Maintain aspect ratio */
+.manga-card-container img {
+  width: 100%; /* Full width of the card */
+  height: 250px; /* Fixed height */
+  object-fit: cover; /* Maintain aspect ratio */
+  border-radius: 10px; /* Rounded corners */
 }
